--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "your-project-name",
   "version": "1.0.0",
+  "description": "A description of your project",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js" // Adjust this line based on your entry file and start command
+    "start": "node index.js"
   },
   "dependencies": {
-    // Your dependencies here
-  }
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
